--- a/aggregator/server/package.json
+++ b/aggregator/server/package.json
@@ -16,6 +16,7 @@
     "chatgpt": "^3.5.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.28.0"
   }
 }
