--- a/aggregator/server/package.json
+++ b/aggregator/server/package.json
@@ -7,14 +7,18 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "type": "module",
+  "type": "commonjs",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.4",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "knex": "^2.4.2",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
     "sequelize": "^6.28.0"
   }
