--- a/aggregator/server/package.json
+++ b/aggregator/server/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "axios": "^1.2.4",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "docker": "^1.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
