--- a/aggregator/server/package.json
+++ b/aggregator/server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "ger": "^0.0.99",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "knex": "^2.4.2",
