--- a/aggregator/package.json
+++ b/aggregator/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "massive": "^6.11.2",
+    "natural": "^6.2.0",
     "newsapi": "^2.4.1"
   },
   "devDependencies": {
