--- a/aggregator/client/package.json
+++ b/aggregator/client/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
+    "jwt-decode": "^3.1.2",
     "natural": "^6.2.0",
     "node": "^16.19.0",
     "react": "^18.2.0",
