--- a/aggregator/server/package.json
+++ b/aggregator/server/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "knex": "^2.4.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
