--- a/aggregator/client/package.json
+++ b/aggregator/client/package.json
@@ -18,8 +18,8 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
+    "ger": "^0.0.99",
     "jwt-decode": "^3.1.2",
-    "natural": "^6.2.0",
     "node": "^16.19.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -27,6 +27,7 @@
     "react-inline-block": "^2.1.3",
     "react-router-dom": "^5.3.4",
     "react-scripts": "^2.1.3",
+    "recombee-api-client": "^4.1.0",
     "sequelize": "^6.28.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
