--- a/aggregator/server/package.json
+++ b/aggregator/server/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "knex": "^2.4.2",
+    "moment": "^2.29.4",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20",
